--- a/requirements.txt
+++ b/requirements.txt
@@ -50,6 +50,7 @@ jsonschema==4.25.1
 jsonschema-specifications==2025.9.1
 kubernetes==33.1.0
 langchain==0.3.27
+langchain-chroma
 langchain-community==0.3.29
 langchain-core==0.3.75
 langchain-openai==0.3.32
@@ -88,6 +89,7 @@ posthog==5.4.0
 propcache==0.3.2
 proto-plus==1.26.1
 protobuf==6.32.0
+psycopg2-binary==2.9.9
 pyasn1==0.6.1
 pyasn1_modules==0.4.2
 pybase64==1.4.2
