--- a/requirements.txt
+++ b/requirements.txt
@@ -142,3 +142,9 @@ xxhash==3.5.0
 yarl==1.20.1
 zipp==3.23.0
 zstandard==0.24.0
+
+# ===============================
+PyJWT
+pydantic[email]
+python-jose[cryptography]
+passlib
